@@ -46,6 +46,7 @@ Fixed bugs
 - Propagation: avoid numerical difficulties
 - ParallelColDetection: avoid segfault by handling already fixed variables separately during sorting
 - SimpleSubstitution: ensure coprime-ness of coefficients for infeasible detection for linear diphantine equations
+- DualFix: handle postsolving of fixed to infinity variable correctly in some rare edge cases
 
 Miscellaneous
 -------------
